[gd_scene load_steps=60 format=3 uid="uid://dkqxqrrhrw57y"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_v8wwx"]
[ext_resource type="Texture2D" uid="uid://7e81buqh75i" path="res://Player/Player.png" id="2_u4usl"]
[ext_resource type="PackedScene" uid="uid://dyrguhw8esoiu" path="res://Hurt and HitBoxes/HitBox.tscn" id="3_34wil"]
[ext_resource type="Script" path="res://Player/BombHitBox.gd" id="4_efc0j"]
[ext_resource type="PackedScene" uid="uid://cjvtme06b231c" path="res://Hurt and HitBoxes/HurtBox.tscn" id="5_m63yb"]
[ext_resource type="Script" path="res://Player/CanvasLayer.gd" id="6_whd82"]
[ext_resource type="Texture2D" uid="uid://cjq8fkxl1aado" path="res://UI/HeartUIEmpty.png" id="7_3bmbl"]
[ext_resource type="Texture2D" uid="uid://ddw6bsbugnyg5" path="res://UI/HeartUIFull.png" id="7_324yc"]
[ext_resource type="AudioStream" uid="uid://by0e5vmd6yl57" path="res://Music and Sounds/Evade.wav" id="9_8y0wn"]
[ext_resource type="AudioStream" uid="uid://dhkar63h64cle" path="res://Music and Sounds/Hit.wav" id="10_b0wis"]
[ext_resource type="AudioStream" uid="uid://dk85t70te521v" path="res://Music and Sounds/Hurt.wav" id="11_tgbla"]

[sub_resource type="Animation" id="Animation_8wul5"]
resource_name = "AttackDown"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBoxPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBoxPivot/BombHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_6swqu"]
resource_name = "AttackLeft"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBoxPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBoxPivot/BombHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_lpfun"]
resource_name = "AttackRight"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBoxPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBoxPivot/BombHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_ugobq"]
resource_name = "AttackUp"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBoxPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4.71239]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBoxPivot/BombHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_o7vj2"]
resource_name = "IdleDown"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_4osrk"]
resource_name = "IdleLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_oiwaf"]
resource_name = "IdleRight"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3due0"]
resource_name = "IdleUp"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_hltq0"]
resource_name = "RollDown"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [55, 56, 57, 58, 59]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"dash_animation_finished"
}]
}

[sub_resource type="Animation" id="Animation_sxsc6"]
resource_name = "RollLeft"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [50, 51, 52, 53, 54]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"dash_animation_finished"
}]
}

[sub_resource type="Animation" id="Animation_o6ftm"]
resource_name = "RollRight"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"dash_animation_finished"
}]
}

[sub_resource type="Animation" id="Animation_megfl"]
resource_name = "RollUp"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [45, 46, 47, 48, 49]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"dash_animation_finished"
}]
}

[sub_resource type="Animation" id="Animation_3hsk6"]
resource_name = "RunDown"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [19, 20, 21, 22, 23, 18]
}

[sub_resource type="Animation" id="Animation_fd2el"]
resource_name = "RunLeft"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 12]
}

[sub_resource type="Animation" id="Animation_8yo33"]
resource_name = "RunRight"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 0]
}

[sub_resource type="Animation" id="Animation_cock1"]
resource_name = "RunUp"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_binn5"]
_data = {
"AttackDown": SubResource("Animation_8wul5"),
"AttackLeft": SubResource("Animation_6swqu"),
"AttackRight": SubResource("Animation_lpfun"),
"AttackUp": SubResource("Animation_ugobq"),
"IdleDown": SubResource("Animation_o7vj2"),
"IdleLeft": SubResource("Animation_4osrk"),
"IdleRight": SubResource("Animation_oiwaf"),
"IdleUp": SubResource("Animation_3due0"),
"RollDown": SubResource("Animation_hltq0"),
"RollLeft": SubResource("Animation_sxsc6"),
"RollRight": SubResource("Animation_o6ftm"),
"RollUp": SubResource("Animation_megfl"),
"RunDown": SubResource("Animation_3hsk6"),
"RunLeft": SubResource("Animation_fd2el"),
"RunRight": SubResource("Animation_8yo33"),
"RunUp": SubResource("Animation_cock1")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_emlgr"]
animation = &"AttackDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jy7kx"]
animation = &"AttackUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jdnsx"]
animation = &"AttackLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uw17e"]
animation = &"AttackRight"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_0qwvs"]
blend_point_0/node = SubResource("AnimationNodeAnimation_emlgr")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_jy7kx")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_jdnsx")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_uw17e")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ltyof"]
animation = &"RollLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_prelj"]
animation = &"RollRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kpeuo"]
animation = &"RollUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_01ka6"]
animation = &"RollDown"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_r6a11"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ltyof")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_prelj")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_kpeuo")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_01ka6")
blend_point_3/pos = Vector2(0, 1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bvskn"]
animation = &"RunLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v8s8y"]
animation = &"RunUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_22pif"]
animation = &"RunRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kriju"]
animation = &"RunDown"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_vr6qm"]
blend_point_0/node = SubResource("AnimationNodeAnimation_bvskn")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_v8s8y")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_22pif")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_kriju")
blend_point_3/pos = Vector2(0, 1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3iy3y"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1k4ny"]
animation = &"IdleDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y07hd"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_savl3"]
animation = &"IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_qsuth"]
blend_point_0/node = SubResource("AnimationNodeAnimation_3iy3y")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_1k4ny")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_y07hd")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_savl3")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aiano"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bnky3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_giwuj"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h2cum"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_77ump"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qwncf"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wr58b"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_f0ehq"]
states/Bomb/node = SubResource("AnimationNodeBlendSpace2D_0qwvs")
states/Bomb/position = Vector2(576, 161)
states/Dash/node = SubResource("AnimationNodeBlendSpace2D_r6a11")
states/Dash/position = Vector2(569, 31.8115)
states/End/position = Vector2(793, 96)
states/Fly/node = SubResource("AnimationNodeBlendSpace2D_vr6qm")
states/Fly/position = Vector2(691, 96)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_qsuth")
states/Idle/position = Vector2(569, 98)
states/Start/position = Vector2(476, 96)
transitions = ["Idle", "Fly", SubResource("AnimationNodeStateMachineTransition_aiano"), "Fly", "Idle", SubResource("AnimationNodeStateMachineTransition_bnky3"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_giwuj"), "Idle", "Bomb", SubResource("AnimationNodeStateMachineTransition_h2cum"), "Bomb", "Idle", SubResource("AnimationNodeStateMachineTransition_77ump"), "Idle", "Dash", SubResource("AnimationNodeStateMachineTransition_qwncf"), "Dash", "Idle", SubResource("AnimationNodeStateMachineTransition_wr58b")]
graph_offset = Vector2(0, -17.1885)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p8o4t"]
radius = 27.0
height = 54.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1qcfg"]
radius = 4.0
height = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1kvgo"]
radius = 2.0
height = 10.0

[node name="Player" type="CharacterBody2D"]
top_level = true
scale = Vector2(1, 0.99868)
collision_layer = 2
script = ExtResource("1_v8wwx")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, 0)
texture = ExtResource("2_u4usl")
hframes = 60

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_binn5")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_f0ehq")
anim_player = NodePath("../AnimationPlayer")
parameters/Bomb/blend_position = Vector2(-0.153122, -0.0220264)
parameters/Dash/blend_position = Vector2(1, 0)
parameters/Fly/blend_position = Vector2(1, 0)
parameters/Idle/blend_position = Vector2(1, 0)

[node name="HitBoxPivot" type="Marker2D" parent="."]
position = Vector2(0, -10)
gizmo_extents = 8.0

[node name="BombHitBox" parent="HitBoxPivot" instance=ExtResource("3_34wil")]
position = Vector2(13, 10)
collision_layer = 8
script = ExtResource("4_efc0j")

[node name="CollisionShape2D" parent="HitBoxPivot/BombHitBox" index="0"]
position = Vector2(12.9974, 0)
rotation = 1.5708
scale = Vector2(1, 1.03968)
shape = SubResource("CapsuleShape2D_p8o4t")
disabled = true

[node name="HurtBox" parent="." instance=ExtResource("5_m63yb")]
collision_mask = 4
metadata/_edit_group_ = true

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource("CapsuleShape2D_1qcfg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_1kvgo")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(3, -2)
zoom = Vector2(1.7, 1.7)
limit_left = 0
limit_top = 0
limit_right = 540
limit_bottom = 540
editor_draw_limits = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("6_whd82")

[node name="Health" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = -1
anchor_left = 0.483
anchor_top = 0.929
anchor_right = 0.483
anchor_bottom = 0.929
offset_left = -59.88
offset_top = -34.44
offset_right = -19.88
offset_bottom = -11.44
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(3, 3)
size_flags_horizontal = 4
horizontal_alignment = 1
vertical_alignment = 1

[node name="H1-0" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(200, 508)
scale = Vector2(4, 4)
texture = ExtResource("7_3bmbl")

[node name="H1" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(200, 508)
scale = Vector2(4, 4)
texture = ExtResource("7_324yc")

[node name="H2-0" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(270, 508)
scale = Vector2(4, 4)
texture = ExtResource("7_3bmbl")

[node name="H2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(270, 508)
scale = Vector2(4, 4)
texture = ExtResource("7_324yc")

[node name="H3-0" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(340, 508)
scale = Vector2(4, 4)
texture = ExtResource("7_3bmbl")

[node name="H3" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(340, 508)
scale = Vector2(4, 4)
texture = ExtResource("7_324yc")

[node name="Dash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_8y0wn")
volume_db = 1.0

[node name="Bomb" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_b0wis")
volume_db = -7.0

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_tgbla")
volume_db = -5.0

[node name="Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_b0wis")
volume_db = -17.0

[connection signal="hit" from="." to="CanvasLayer" method="_on_player_hit"]
[connection signal="area_entered" from="HitBoxPivot/BombHitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]

[editable path="HitBoxPivot/BombHitBox"]
[editable path="HurtBox"]
